# nomad

./: file.py  main.py  pyproject.toml  python.csv  react.csv  replit.nix
extractors/: indeed.py  remoteok.py  wwr.py
templates/: home.html  search.html
